# legal-agent

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
docker/: Dockerfile  wait-for-it.sh
src/: config.py  main.py
src/api/: router.py
src/api/routes/: collections.py  documents.py  search.py
src/core/: database.py  health.py
src/domain/: entities.py
src/pipelines/chunk/: __init__.py  pdf_chunker.py
src/pipelines/embedding/: __init__.py  embedder.py
src/pipelines/rag/: retriever.py
src/services/: agent.py  indexer.py  rag_service.py
src/templates/: system_prompt.py
